<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:padding="16dp">

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtPassword"
        android:background="#fff"
        android:hint="@string/user_name"
        android:paddingBottom="6dp"
        android:paddingLeft="10dp"
        android:paddingTop="6dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:background="#fff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="6dp"
        android:paddingLeft="10dp"
        android:paddingTop="6dp" />

    <CheckBox
        android:id="@+id/chkSaveInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPassword"
        android:text="@string/remember_me"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkSaveInfo"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/lblRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtUserName"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/lock" />


</RelativeLayout>